gcc/testsuite/gdc.test/compilable/imports/udamodule2a.d
module imports.udamodule2a;

struct UDA
{
    int a;
}
