gcc/testsuite/gdc.test/fail_compilation/imports/b19762.d
module imports.b19762;

struct Baz {}
struct Qux
{
	import imports.c19762;
}
